# Correlator

./: .gdbinit  .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  FIX_STDOUT.md  Project_map.md  QUICK_START.md  REFACTORING_PLAN.md  RELEASE_SILENT_MODE.md  debug.sh  main.cpp  view_reports.sh
.cache/clangd/index/: Configuration.hpp.913F20DFC61501AA.idx  CorrelationPipeline.hpp.C23D3CE8F0D78393.idx  Correlator.hpp.B94B99B2D521F5F2.idx  DataSnapshot.hpp.4566033953BBAEB7.idx  DataValidator.hpp.3D0A3E91FD2332E0.idx  IConfiguration.hpp.97D0A4C93BAF3C6B.idx  IDataSnapshot.hpp.968E450BF619B7AE.idx  IDataValidator.hpp.B51FFB7B1E3DAAD8.idx  IFFTBackend.hpp.0031A644A228B39D.idx  IResultExporter.hpp.D57278F7F863A166.idx  OpenCLFFTBackend.hpp.D936CBC287C7EDEB.idx  ResultExporter.hpp.50ACB88DCA6A9296.idx  cpu_converter.cpp.F9524A38B55370C9.idx  cpu_converter.hpp.1EC0E1583802EAEB.idx  debug_log.hpp.494DB165D1DD6718.idx  fft_handler.cpp.06E1AE5F567A7FAF.idx  fft_handler.hpp.02DC8E1CE503EA78.idx  gpu_converter.cpp.13BAAB421A9B557A.idx  gpu_converter.hpp.136A5D54D8E5230B.idx  main.cpp.918933A31DF58EB0.idx  profiler.hpp.68F8E5077050497F.idx
.cursor/rules/: cursorrules.mdc
Doc/: CLEANUP_FIX_GUIDE.md  CLEANUP_FIX_SUMMARY.md  COMMAND_BUFFERS_STRATEGY.md  Python_Algorithm_Description.md  SVM_GPU_QUEUE_LATENCY.md  cleanup_SAFE.cpp  fft_handler_SAFE.hpp
Doc/CommandBuff/: CAPABILITY_CHECKER_GUIDE.md  CMakeLists.txt  QUICK_START.md  opencl_capability_checker.cpp
Doc/SpeedAlgoritm/: OPTIMIZATION_QUICK_REMINDER.md  OPTIMIZATION_ROADMAP.md  SESSION_MEMORY.md
Doc/План/: EditCallBack.txt  ФормированиеОтчета.txt  задача_для _python.txt
MemoryBank/: key_findings.md
Report/: profiling_report_2025-12-23_15-34-15.md  profiling_report_2025-12-24_08-19-24.md  profiling_report_2025-12-24_08-30-11.md  profiling_report_2025-12-24_09-57-49.md  profiling_report_2025-12-24_09-58-51.md  profiling_report_2025-12-24_09-58-57.md  profiling_report_2025-12-24_09-59-04.md  profiling_report_2025-12-25_10-06-19.md  profiling_report_2025-12-25_11-01-57.md  profiling_report_2025-12-25_11-05-00.md  profiling_report_2025-12-25_11-06-13.md
Report/JSON/: profiling_report_2025-12-23_15-34-15.json  profiling_report_2025-12-24_08-19-24.json  profiling_report_2025-12-24_08-30-11.json  profiling_report_2025-12-24_09-57-49.json  profiling_report_2025-12-24_09-58-51.json  profiling_report_2025-12-24_09-58-57.json  profiling_report_2025-12-24_09-59-04.json  profiling_report_2025-12-25_10-06-19.json  profiling_report_2025-12-25_11-01-57.json  profiling_report_2025-12-25_11-05-00.json  profiling_report_2025-12-25_11-06-13.json
build_debug/: Correlator
examples/: basic_usage.cpp
include/: cpu_converter.hpp  debug_log.hpp  fft_handler.hpp  gpu_converter.hpp  profiler.hpp
include/correlator/: ARCHITECTURE.md  Configuration.hpp  CorrelationPipeline.hpp  Correlator.hpp  DataSnapshot.hpp  DataValidator.hpp  IConfiguration.hpp  IDataSnapshot.hpp  IDataValidator.hpp  IFFTBackend.hpp  IResultExporter.hpp  OpenCLFFTBackend.hpp  README.md  ResultExporter.hpp
src/: Test_GPU_and_OpenCl.h  cpu_converter.cpp  fft_correlator_kernel.cl  fft_handler.cpp  gpu_converter.cpp  gpu_converter_kernel.cl  main_step3.cpp  pre_post_callbacks.cl  step3_correlation_kernel.cl  step3_implementation.cpp
